[package]
authors = ["Gary Holland <garyhollandxyz@gmail.com>"]
edition = "2018"
name = "zero2prod"
version = "0.1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"
config = "0.10.1"
serde = {version = "1", features = ["derive"]}

# We are using TOML table syntax to avoid a super-long line [dependencies.sqlx]
[dependencies.sqlx]
default-features = false
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"]
version = "0.4.0-beta.1"

[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"
